k8s/my-media-stack/raw/traefik-dashboard-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: my-media-stack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.beatapostapita.duckdns.org`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 8080
  tls:
    certResolver: beatapostapita_duckdns_letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-redirect
  namespace: my-media-stack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.beatapostapita.duckdns.org`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 8080
      middlewares:
        - name: redirect-to-https
          namespace: my-media-stack
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: my-media-stack
spec:
  redirectScheme:
    scheme: https
    permanent: true
